vpc.tf
resource "aws_vpc" "terra_vpc" {
  cidr_block = var.vpc_cidr
  tags = {
    Name = "terra-vpc"
  }
}

resource "aws_internet_gateway" "terra_igw" {
  vpc_id = aws_vpc.terra_vpc.id
  tags = {
    Name = "terra-igw"
  }
}

resource "aws_subnet" "terra_pub_sub" {
  count                   = length(var.subnets_cidr)
  vpc_id                  = aws_vpc.terra_vpc.id
  cidr_block              = element(var.subnets_cidr, count.index)
  availability_zone       = element(var.azs, count.index)
  map_public_ip_on_launch = true
  tags = {
    Name = "terra-pub-sub${count.index + 1}"
  }
}

resource "aws_route_table" "public_rt" {
  vpc_id = aws_vpc.terra_vpc.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.terra_igw.id
  }
  tags = {
    Name = "public-rt"
  }
}

resource "aws_route_table_association" "route" {
  count          = length(var.subnets_cidr)
  subnet_id      = element(aws_subnet.terra_pub_sub.*.id, count.index)
  route_table_id = aws_route_table.public_rt.id
}
